<resources>
    <string name="app_name">ProbabilityCalculator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start">START</string>
    <string name="main_title">WELCOME TO FOBILE!</string>
    <string name="outage_activity_name">Outage</string>
    <string name="select_something">Select something</string>
    <string name="outage_probability">Outage Probability</string>
    <string name="actual_cluster">actual cluster</string>
    <string name="calculate_cci_db">calculate CCI (dB)</string>
    <string name="calculate_reuse_distance_d">calculate  reuse distance(D)</string>
    <string name="insert_the_propagation_law_etha_value">etha value</string>
    <string name="calculate_radius_km_2">calculate radius</string>
    <string name="calculate_area_km_2">calculate area</string>
    <string name="go">Go!</string>
    <string name="distance_reuse">Distance Reuse</string>
    <string name="test">Test!</string>
    <string name="insert_the_possible_cluster_k">cluster(K)</string>
    <string name="possible_clusters">possible clusters</string>
    <string name="insert_value_km_2">insert value (km)</string>
    <string name="cell_geometry">cell geometry</string>
    <string name="antenna_type">antenna type</string>
    <string name="how_many_frequencies_are_there">n° frequencies</string>
    <string name="omnidirectional_antenna">omnidirectional antenna</string>
    <string name="number_of_frequencies">number of frequencies</string>
    <string name="actual_cell_area">actual cell area</string>
    <string name="actual_cell_radius">actual cell radius</string>
    <string name="actual_co_cell_interference">actual CCI</string>
    <string name="omnidirectional">Omnidirectional</string>
    <string name="three_sectorializated">Three-Sectorializated</string>
    <string name="msg_missing_data">There are some missing data</string>
    <string name="msg_in_OoB_A">Offered Traffic Out of Bounds</string>
    <string name="msg_in_OoB_C">Number of Channels Out of Bounds</string>
    <string name="msg_format_BlockPerc">Blocking Probability is %s %%</string>
    <string name="msg_in_invalid">Invalid input</string>
    <string name="msg_in_OoB_B">Blocking Probability Out of Bounds</string>
    <string name="msg_descr_A">Insert Offered Traffic [ERLANG]</string>
    <string name="msg_descr_C">Insert Number of Channels</string>
    <string name="msg_descr_Br">Insert Blocking Probability [0.001-40]%</string>
    <string name="msg_descr_Cr">Insert Number of Channels [1-100]</string>
    <string name="msg_in_invalid_Thr">Invalid input Threshold Power</string>
    <string name="msg_descr_Outz">Outage Probability close to 0%</string>
    <string name="msg_descr_Outc">Outage Probability close to 100%</string>
    <string name="msg_in_invalid_ThrRec">Invalid input Threshold and/or Received Power</string>
    <string name="msg_format_dbmW">%s dBm equals %s Watt</string>
    <string name="msg_Prange">Typical dBm Power values [-190, 80]</string>
    <string name="msg_format_OutPerc">Outage Probabily is %s%%</string>
    <string name="msg_Out50">Outage Probability is 50%</string>
    <string name="what_do_you_need_to_find">What do you need to find?</string>
    <string name="blocking_probability">Blocking Probability</string>
    <string name="offered_traffic">Offered Traffic</string>
    <string name="calculate">CALCULATE</string>
    <string name="erlangb">ERLANGB</string>
    <string name="select_one">SELECT ONE</string>
    <string name="cellular_networks">Cellular Networks</string>
    <string name="msg_descr_hintThr">Insert Threshold Power in dBm\n[for value in Watt click again]</string>
    <string name="msg_descr_hintRec">Insert Received Power in dBm\n[for value in Watt click again]</string>
    <string name="msg_cluster_a">Cluster value</string>
    <string name="msg_frequencies_a">number of frequencies</string>
    <string name="msg_cell_geometry_a">value of area/radius</string>
    <string name="msg_propagation_law">etha value</string>
    <string name="msg_cell_area_a">Cell\'s area</string>
    <string name="msg_radius_a">\"Cell\'s radius</string>
    <string name="msg_cci_a">Co-Channel Interference</string>
    <string name="msg_error_a">Invalid input</string>
    <string name="msg_out_of_bounds">Value out of bounds</string>
    <string name="msg_error_antenna_a">You have not insert the Antenna type</string>
    <string name="msg_error_cluster_a">You have not insert the Cluster value</string>
    <string name="msg_error_radius_a">You have not insert the Radius value</string>
    <string name="msg_confirm_antenna">Yes, this is a possible number of antennas</string>
    <string name="msg_negative_feed_antenna">This is NOT a possible number of antennas</string>
    <string name="msg_cluster_negative_feed">This is NOT a possible number of cluster</string>
    <string name="msg_cluster_positive_feed_a">Yes, this is a possible number of cluster</string>
    <string name="msg_cluster_out_of_bound_b">cluster value out of bound</string>
    <string name="msg_correct_value_cct_omni">The CCI value in the Omnid. case is:</string>
    <string name="msg_db">" dB"</string>
    <string name="msg_cci_value_threesect">The CCI value in the three-sect. case is:</string>
    <string name="mag_radius_out_of_bound_a">radius value out of bound</string>
    <string name="msg_reuse_distance_value">"Reuse distance value "</string>
    <string name="msg_radius_value">"Radius value "</string>
    <string name="msg_area_value">"Area value "</string>
    <string name="msg_value_antenna_omni_case">Value for omnidirectional case is :</string>
    <string name="msg_value_antenna_threesect_case">Value for three-sector case is :</string>
    <string name="university_of_rome_tor_vergata">University of Rome Tor Vergata</string>
    <string name="department_of_computer_engeeniering">Department of Computer Engeeniering</string>
    <string name="designed_by_alessio_scarpelli_adam_brwzkoscki">Designed by Alessio Scarpelli, Adam Brzozowski</string>
    <string name="version">Version 1.0.0</string>
    <string name="km">" Km"</string>
    <string name="squareKm">" Km²"</string>
    <string name="cci">CCI</string>
    <string name="K">K</string>
    <string name="etha">Eta</string>
    <string name="msg_prob_calls">Probability %d active calls is %s</string>
    <string name="msg_OoB">Values Out of Bounds</string>
    <string name="chBinomial_label">Probability k active calls</string>
    <string name="msg_descr_calls">Insert Active Calls</string>
    <string name="msg_descr_users">Insert Number of Users</string>
    <string name="poisson" translatable="false">POISSON</string>
    <string name="binomial">BINOMIAL</string>
</resources>